--- a/src/WSHardwarePluginV2/WSHardwarePluginV2.vcxproj
+++ b/src/WSHardwarePluginV2/WSHardwarePluginV2.vcxproj
@@ -98,7 +98,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>COOLite;WIN32;_DEBUG;_WINDOWS;_USRDLL;WSHARDWAREPLUGINV2_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;WSHARDWAREPLUGINV2_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <LanguageStandard>stdcpplatest</LanguageStandard>
@@ -123,7 +123,7 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>COOLite;_DEBUG;_WINDOWS;_USRDLL;WSHARDWAREPLUGINV2_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_WINDOWS;_USRDLL;WSHARDWAREPLUGINV2_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <LanguageStandard>stdcpplatest</LanguageStandard>
@@ -150,7 +150,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>COOLite;WIN32;NDEBUG;_WINDOWS;_USRDLL;WSHARDWAREPLUGINV2_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;WSHARDWAREPLUGINV2_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <LanguageStandard>stdcpplatest</LanguageStandard>
@@ -179,7 +179,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>COOLite;NDEBUG;_WINDOWS;_USRDLL;WSHARDWAREPLUGINV2_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_WINDOWS;_USRDLL;WSHARDWAREPLUGINV2_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <LanguageStandard>stdcpplatest</LanguageStandard>
@@ -227,6 +227,7 @@
     <ClInclude Include="CrystalDiskInfo\StorageQuery.h" />
     <ClInclude Include="CrystalDiskInfo\UtilityFx.h" />
     <ClInclude Include="D3DKMTGPUBase.h" />
+    <ClInclude Include="D3DKMTHelper.h" />
     <ClInclude Include="Data.h" />
     <ClInclude Include="DirectXFactory.h" />
     <ClInclude Include="DiskManager.h" />
@@ -359,6 +360,7 @@
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">..\stdafx.h</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="D3DKMTGPUBase.cpp" />
+    <ClCompile Include="D3DKMTHelper.cpp" />
     <ClCompile Include="DirectXFactory.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
@@ -458,9 +460,6 @@
     <Xml Include="MemoryDatabase.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Libcommon\CooLite\WinRing0.vcxproj">
-      <Project>{68feadcc-d5c0-40a0-9f61-c82ab47cda1d}</Project>
-    </ProjectReference>
     <ProjectReference Include="..\..\Libcommon\jsoncpp\build\src\lib_json\jsoncpp_static.vcxproj">
       <Project>{73f61e0d-cc26-3f9c-990e-fb1659cd820b}</Project>
     </ProjectReference>
@@ -472,9 +471,6 @@
     </ProjectReference>
     <ProjectReference Include="..\libSmbios\libSmbios.vcxproj">
       <Project>{d85e9f42-fe3b-4de9-bcbe-87c26b30f1e7}</Project>
-    </ProjectReference>
-    <ProjectReference Include="Sys\DriverLoad\DriverLoad.vcxproj">
-      <Project>{02ed4f5e-81eb-4125-a226-f5cebb0d81ab}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
